--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <h1>Hello, I’m Sangini.</h1>
       <p>I am a <strong>technocrat</strong> pursuing B.Tech in Computer Science and Engineering with specialization in Artificial Intelligence and Deep Learning (2024–2028). I am passionate about solving real-world problems using a mix of software, creativity, and leadership. With a growth mindset and a zeal to learn, I believe in delivering value through innovation and collaboration.</p>
     </div>
-    <img src="Sangini Garg1.jpg" alt="Sangini Garg">
+    <img src="images/Sangini Garg1.jpg" alt="Sangini Garg">
   </header>
 
   <section id="about">
