--- a/index.html
+++ b/index.html
@@ -150,13 +150,16 @@
 
   <section id="certificates">
     <h2 class="section-heading">Certificates</h2>
-    <p>Here you can upload and display scanned certificates, such as coding competitions, workshops, internships, or online course completions.</p>
+    <p>
+      <img src="images/Coursera course 1.jpg" alt="Foundation of Cybersecurity">
+      <img src="images/Coursera course 2.jpg" alt="Play it safe:Manage security risk">
+      <img src="images/Coursera course 3.jpg" alt="Connect and Protect">
+      <img src="images/Coursera course 4.jpg" alt="Tools of the Trade:Linux and SQL">
+      <img src="images/Coursera course 5.jpg" alt="Assests, threats , vulnerablities">
+      
+    </p>
   </section>
 
-  <section id="gallery">
-    <h2 class="section-heading">Gallery</h2>
-    <p>Photos and moments from events, hackathons, or any academic projects can be showcased here.</p>
-  </section>
 
   <section id="education">
     <h2 class="section-heading">Education</h2>
